templates/nri-metadata-injection_template.yaml
---
# Source: nri-metadata-injection/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-nri-metadata-injection
  namespace: default
  labels:
    app.kubernetes.io/name: nri-metadata-injection
    helm.sh/chart: nri-metadata-injection-2.2.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app.kubernetes.io/name: nri-metadata-injection
---
# Source: nri-metadata-injection/templates/admission-webhooks/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-nri-metadata-injection
  labels:
    app.kubernetes.io/name: nri-metadata-injection
    helm.sh/chart: nri-metadata-injection-2.2.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: metadata-injection.newrelic.com
  clientConfig:
    service:
      name: release-name-nri-metadata-injection
      namespace: default
      path: "/mutate"
    caBundle: ""
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  failurePolicy: Ignore
  timeoutSeconds: 30
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
  - v1
